# libbricks

./: .clang-format  README.mkd  meson.build  meson_options.txt  uncrustify.config
docs/: libbricks.toml.in  meson.build
docs/images/: meson.build  tab-bar.ui
src/: bricks.c  bricks.h  brk-animation-private.h  brk-animation-target-private.h  brk-animation-target.c  brk-animation-target.h  brk-animation-util-private.h  brk-animation-util.c  brk-animation-util.h  brk-animation.c  brk-animation.h  brk-bidi-private.h  brk-bidi.c  brk-bin.c  brk-bin.h  brk-button-group.c  brk-button-group.h  brk-button-group.vala  brk-easing-private.h  brk-easing.c  brk-easing.h  brk-fading-label-private.h  brk-fading-label.c  brk-file-dialog-filter-view.vala  brk-file-dialog-icon-view.vala  brk-file-dialog-list-view.vala  brk-file-dialog-tree-view.vala  brk-file-dialog.vala  brk-file-thumbnail.vala  brk-gizmo-private.h  brk-gizmo.c  brk-main.c  brk-main.h  brk-main.vala  brk-path-bar.vala  brk-preferences.vala  brk-quick-open-entry.vala  brk-statusbar.vala  brk-style-manager-private.h  brk-style-manager.c  (+29 more)
src/resources/: bricks.gresources.xml
src/resources/theme/Default/: brk.css
src/resources/ui/: brk-file-dialog-filter-view.ui  brk-file-dialog-icon-view.ui  brk-file-dialog-list-view.ui  brk-file-dialog-tree-view.ui  brk-file-dialog.ui  brk-preferences-dialog.ui  brk-preferences-group.ui  brk-preferences-page.ui  brk-preferences-window.ui  brk-quick-open-entry.ui  brk-statusbar.ui  brk-tab-bar.ui  brk-tab-drag-view.ui  brk-tab-page-drag-view.ui  brk-tab-page-tab.ui  brk-tab.ui
subprojects/: .gitignore
tests/: meson.build
tests/lint/: libbricks_lint.py  test_entrypoint.py  test_exact_includes.py  test_no_circular_includes.py  test_source_and_header_contents_match.py  test_source_and_header_orders_match.py  test_unused_symbols.py
vapi/: config.vapi  gtk4.vapi
